// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentDetailsSummary correctly renders a charge 1`] = `
<div>
  <div
    class="woocommerce-card payment-details-summary-details"
  >
    <div
      class="woocommerce-card__body"
    >
      <div
        class="payment-details-summary"
      >
        <div
          class="payment-details-summary__section"
        >
          <p
            class="payment-details-summary__amount"
          >
            $15.00
            <span
              class="payment-details-summary__amount-currency"
            >
              usd
            </span>
            <span
              class="chip chip-light"
            />
          </p>
          <div
            class="payment-details-summary__breakdown"
          >
            
            <p>
              Fee: 
              $-0.70
            </p>
            <p>
              Net: 
              $14.30
            </p>
          </div>
        </div>
        <div
          class="payment-details-summary__section"
        >
          <div
            class="payment-details-summary__actions"
          >
            <a
              class="components-button payment-details-summary__actions-item is-button is-default is-large"
              href="https://somerandomorderurl.com/?edit_order=45981"
            >
              View order #45981
            </a>
          </div>
        </div>
      </div>
      <hr
        class="full-width"
      />
      <ul
        class="woocommerce-list woocommerce-list--horizontal"
      >
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Date
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Customer
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Payment method
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Risk evaluation
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`PaymentDetailsSummary renders fully refunded information for a charge 1`] = `
<div>
  <div
    class="woocommerce-card payment-details-summary-details"
  >
    <div
      class="woocommerce-card__body"
    >
      <div
        class="payment-details-summary"
      >
        <div
          class="payment-details-summary__section"
        >
          <p
            class="payment-details-summary__amount"
          >
            $15.00
            <span
              class="payment-details-summary__amount-currency"
            >
              usd
            </span>
            <span
              class="chip chip-light"
            >
              Refunded
            </span>
          </p>
          <div
            class="payment-details-summary__breakdown"
          >
            <p>
              Refunded: 
              $-15.00
            </p>
            <p>
              Fee: 
              $-0.70
            </p>
            <p>
              Net: 
              $-0.70
            </p>
          </div>
        </div>
        <div
          class="payment-details-summary__section"
        >
          <div
            class="payment-details-summary__actions"
          >
            <a
              class="components-button payment-details-summary__actions-item is-button is-default is-large"
              href="https://somerandomorderurl.com/?edit_order=45981"
            >
              View order #45981
            </a>
          </div>
        </div>
      </div>
      <hr
        class="full-width"
      />
      <ul
        class="woocommerce-list woocommerce-list--horizontal"
      >
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Date
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Customer
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Payment method
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Risk evaluation
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`PaymentDetailsSummary renders loading state 1`] = `
<div>
  <div
    class="woocommerce-card payment-details-summary-details"
  >
    <div
      class="woocommerce-card__body"
    >
      <div
        class="payment-details-summary"
      >
        <div
          class="payment-details-summary__section"
        >
          <p
            class="payment-details-summary__amount"
          >
            <span
              aria-busy="true"
              class="is-loadable-placeholder"
            >
              Amount placeholder
            </span>
          </p>
          <div
            class="payment-details-summary__breakdown"
          >
            
            <p>
              <span
                aria-busy="true"
                class="is-loadable-placeholder"
              >
                Fee amount
              </span>
            </p>
            <p>
              <span
                aria-busy="true"
                class="is-loadable-placeholder"
              >
                Net amount
              </span>
            </p>
          </div>
        </div>
        <div
          class="payment-details-summary__section"
        >
          <div
            class="payment-details-summary__actions"
          />
        </div>
      </div>
      <hr
        class="full-width"
      />
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-block"
      >
        <p
          style="line-height: 4;"
        >
          Block placeholder
        </p>
      </span>
    </div>
  </div>
</div>
`;

exports[`PaymentDetailsSummary renders partially refunded information for a charge 1`] = `
<div>
  <div
    class="woocommerce-card payment-details-summary-details"
  >
    <div
      class="woocommerce-card__body"
    >
      <div
        class="payment-details-summary"
      >
        <div
          class="payment-details-summary__section"
        >
          <p
            class="payment-details-summary__amount"
          >
            $15.00
            <span
              class="payment-details-summary__amount-currency"
            >
              usd
            </span>
            <span
              class="chip chip-light"
            >
              Partial refund
            </span>
          </p>
          <div
            class="payment-details-summary__breakdown"
          >
            <p>
              Refunded: 
              $-12.00
            </p>
            <p>
              Fee: 
              $-0.70
            </p>
            <p>
              Net: 
              $2.30
            </p>
          </div>
        </div>
        <div
          class="payment-details-summary__section"
        >
          <div
            class="payment-details-summary__actions"
          >
            <a
              class="components-button payment-details-summary__actions-item is-button is-default is-large"
              href="https://somerandomorderurl.com/?edit_order=45981"
            >
              View order #45981
            </a>
          </div>
        </div>
      </div>
      <hr
        class="full-width"
      />
      <ul
        class="woocommerce-list woocommerce-list--horizontal"
      >
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Date
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Customer
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Payment method
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Risk evaluation
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`PaymentDetailsSummary renders the information of a disputed charge 1`] = `
<div>
  <div
    class="woocommerce-card payment-details-summary-details"
  >
    <div
      class="woocommerce-card__body"
    >
      <div
        class="payment-details-summary"
      >
        <div
          class="payment-details-summary__section"
        >
          <p
            class="payment-details-summary__amount"
          >
            $15.00
            <span
              class="payment-details-summary__amount-currency"
            >
              usd
            </span>
            <span
              class="chip chip-light"
            />
          </p>
          <div
            class="payment-details-summary__breakdown"
          >
            <p>
              Refunded: 
              $-15.00
            </p>
            <p>
              Fee: 
              $-15.70
            </p>
            <p>
              Net: 
              $-15.70
            </p>
          </div>
        </div>
        <div
          class="payment-details-summary__section"
        >
          <div
            class="payment-details-summary__actions"
          >
            <a
              class="components-button payment-details-summary__actions-item is-button is-default is-large"
              href="https://somerandomorderurl.com/?edit_order=45981"
            >
              View order #45981
            </a>
          </div>
        </div>
      </div>
      <hr
        class="full-width"
      />
      <ul
        class="woocommerce-list woocommerce-list--horizontal"
      >
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Date
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Customer
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Payment method
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            >
              Risk evaluation
            </span>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="woocommerce-list__item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="woocommerce-list__item-text"
          >
            <span
              class="woocommerce-list__item-title"
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
